--- a/bootstrap4/index.html
+++ b/bootstrap4/index.html
@@ -1,34 +1,34 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
-    <meta name="description" content="">
-    <meta name="author" content="">
-    <link rel="icon" href="i/favicon.ico">
-		<link href="https://fonts.googleapis.com/css?family=Lato:400,700,300,100" rel="stylesheet">
+    <head>
+        <meta charset="utf-8">
+        <meta http-equiv="X-UA-Compatible" content="IE=edge">
+        <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+        <!-- The above 3 meta tags *must* come first in the head; any other head content must come *after* these tags -->
+        <meta name="description" content="">
+        <meta name="author" content="">
+        <link rel="icon" href="i/favicon.ico">
+    		<link href="https://fonts.googleapis.com/css?family=Lato:400,700,300,100" rel="stylesheet">
 
-    <title>Sneakers Admin</title>
+        <title>Sneakers Admin</title>
 
-    <!-- Bootstrap core CSS -->
-    <link href="css/bootstrap.min.css" rel="stylesheet">
+        <!-- Bootstrap core CSS -->
+        <link href="css/bootstrap.min.css" rel="stylesheet">
 
-    <!-- Custom styles for this template -->
-    <link href="css/icheck.css" rel="stylesheet">
-    <link href="css/styles.css" rel="stylesheet">
-  </head>
+        <!-- Custom styles for this template -->
+        <link href="css/icheck.css" rel="stylesheet">
+        <link href="css/styles.css" rel="stylesheet">
+    </head>
 <body>
 
 <nav class="navbar navbar-light bg-faded navbar-fixed-top">
-	<div class="container">
+    <div class="container">
 		<button class="navbar-toggler hidden-sm-up" type="button" data-toggle="collapse" data-target="#navbar-header" aria-controls="navbar-header">
 			&#9776;
 		</button>
-    <div class="collapse navbar-toggleable-xs" id="navbar-header">
-      <a class="navbar-brand" href="#">Sneakers Admin</a>
-      <ul class="nav navbar-nav">
+        <div class="collapse navbar-toggleable-xs" id="navbar-header">
+            <a class="navbar-brand" href="#">Sneakers Admin</a>
+            <ul class="nav navbar-nav">
 				<li class="nav-item dropdown">
 				    <a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">Orders</a>
 				    <div class="dropdown-menu">
@@ -108,7 +108,7 @@
 				<li class="nav-item pull-xs-right">
 				    <a class="nav-link">Hi lauren@airgoat.com</a>
 				</li>
-      </ul>
+            </ul>
 		</div>
 	</div>
 </nav> <!-- /navbar -->
@@ -116,37 +116,37 @@
 <div class="main container">
 	<div class="row">
 		<div class="col-md-7 col-lg-8 col-xs-12 base">
-	    <div class="product-images">
-	    	<div class="product-images-item">
-	    		<img src="http://d3vqjn8pcjbsvf.cloudfront.net/en/images/143347/zoom.jpg" alt="" data-toggle="modal" data-target="#Popup">
-					<div class="product-images-item-control control-lg js-control">
-						<input type="checkbox" name="checkbox10">
-					</div>
-	    	</div>
-	    	<div class="product-images-item">
-	    		<img src="http://d3vqjn8pcjbsvf.cloudfront.net/en/images/143347/zoom.jpg" alt="" data-toggle="modal" data-target="#Popup">
-					<div class="product-images-item-control control-lg js-control">
-						<input type="checkbox" name="checkbox11">
-					</div>
-	    	</div>
-	    	<div class="product-images-item">
-	    		<img src="http://d3vqjn8pcjbsvf.cloudfront.net/en/images/143347/zoom.jpg" alt="" data-toggle="modal" data-target="#Popup">
-					<div class="product-images-item-control control-lg js-control">
-						<input type="checkbox" name="checkbox12">
-					</div>
-	    	</div>
-	    	<div class="product-images-item">
-	    		<img src="http://d3vqjn8pcjbsvf.cloudfront.net/en/images/143347/zoom.jpg" alt="" data-toggle="modal" data-target="#Popup">
-					<div class="product-images-item-control control-lg js-control">
-						<input type="checkbox" name="checkbox13">
-					</div>
-	    	</div>
-	    </div>
-			
+    	    <div class="product-images">
+    	    	<div class="product-images-item">
+    	    		<img src="i/temp/zoom.jpg" alt="" data-toggle="modal" data-target="#Popup">
+    				<div class="product-images-item-control control-lg js-control">
+    					<input type="checkbox" name="checkbox10">
+    				</div>
+    	    	</div>
+    	    	<div class="product-images-item">
+    	    		<img src="i/temp/zoom.jpg" alt="" data-toggle="modal" data-target="#Popup">
+    				<div class="product-images-item-control control-lg js-control">
+    					<input type="checkbox" name="checkbox11">
+    				</div>
+    	    	</div>
+    	    	<div class="product-images-item">
+    	    		<img src="i/temp/zoom.jpg" alt="" data-toggle="modal" data-target="#Popup">
+    				<div class="product-images-item-control control-lg js-control">
+    					<input type="checkbox" name="checkbox12">
+    				</div>
+    	    	</div>
+    	    	<div class="product-images-item">
+    	    		<img src="i/temp/zoom.jpg" alt="" data-toggle="modal" data-target="#Popup">
+    				<div class="product-images-item-control control-lg js-control">
+    					<input type="checkbox" name="checkbox13">
+    				</div>
+    	    	</div>
+    	    </div>			
 		</div>
+        
 		<div class="col-md-5 col-lg-4 col-xs-12 aside">
 			<div class="product-header aside-item">
-				<img src="http://d3vqjn8pcjbsvf.cloudfront.net/en/images/143347/search_definition_medium.jpg" alt="">
+				<img src="i/temp/medium.jpg" alt="">
 				<!--<h3 class="product-title">Air Max <br>Zero</h3>-->
 				<h3 class="product-title">NMD_Runner 1 'Red Camo’<br>2016</h3>
 				<div class="product-actions">
@@ -273,11 +273,11 @@
 							Canceled 
 							<div class="product-issue-info-value">10</div>
 						</div>
-				</div>
-			</div>
-		</div>
-	</div>
-
+				    </div>
+			    </div>
+		    </div>
+	    </div>
+    </div>
 </div>
 
 <div class="modal fade in popup" id="Popup">
@@ -316,13 +316,13 @@
 			<div class="row popup-imgs">
 				<div class="col-xs-12 col-sm-12 col-md-6">
 					<div class="popup-img">
-		    		<img src="http://d3vqjn8pcjbsvf.cloudfront.net/en/images/143347/large.jpg" alt="">
+		    		    <img src="i/temp/zoom.jpg" alt="">
 					</div>
 				</div>
 				<div class="col-xs-12 col-sm-12 col-md-6">
 					<div class="popup-imgs-items">
 						<div class="popup-img">
-			    		<img src="http://d3vqjn8pcjbsvf.cloudfront.net/en/images/143347/large.jpg" alt="">
+			    		    <img src="i/temp/zoom.jpg" alt="">
 							<div class="popup-img-caption">
 								<ul class="seller-stats">
 									<li class="seller-stats-item">@Thesolecarter <span class="seller-stats-item-count">120</span></li>
@@ -333,7 +333,7 @@
 							</div>
 						</div>
 						<div class="popup-img">
-			    		<img src="http://d3vqjn8pcjbsvf.cloudfront.net/en/images/143347/large.jpg" alt="">
+			    		    <img src="i/temp/zoom.jpg" alt="">
 							<div class="popup-img-caption">
 								<ul class="seller-stats">
 									<li class="seller-stats-item">@Thesolecarter <span class="seller-stats-item-count">120</span></li>
@@ -344,7 +344,7 @@
 							</div>
 						</div>
 						<div class="popup-img">
-			    		<img src="http://d3vqjn8pcjbsvf.cloudfront.net/en/images/143347/large.jpg" alt="">
+			    		    <img src="i/temp/zoom.jpg" alt="">
 							<div class="popup-img-caption">
 								<ul class="seller-stats">
 									<li class="seller-stats-item">@Thesolecarter <span class="seller-stats-item-count">120</span></li>
@@ -355,7 +355,7 @@
 							</div>
 						</div>
 						<div class="popup-img">
-			    		<img src="http://d3vqjn8pcjbsvf.cloudfront.net/en/images/143347/large.jpg" alt="">
+			    		    <img src="i/temp/zoom.jpg" alt="">
 							<div class="popup-img-caption">
 								<ul class="seller-stats">
 									<li class="seller-stats-item">@Thesolecarter <span class="seller-stats-item-count">120</span></li>
@@ -364,11 +364,12 @@
 									<li class="seller-stats-item">Canceled <span class="seller-stats-item-count">1</span></li>
 								</ul>
 							</div>
-						</div>							
-				</div>
-			</div>
+					    </div>							
+                    </div>
+                </div>
+            </div>
+        </div>
     </div>
-	</div>
 </div>
 
     <!-- Bootstrap core JavaScript
