--- a/bootstrap4/index.html
+++ b/bootstrap4/index.html
@@ -320,7 +320,7 @@
 		    		    <img src="i/temp/zoom.jpg" alt="">
 					</div>
 				</div>
-				<div class="col-xs-12 col-sm-12 col-md-6">
+				<div class="col-xs-12 col-sm-12 col-md-6 popup-imgs-col">
 					<div class="popup-imgs-items">
 						<!--<div class="popup-img">
 			    		    <img src="i/temp/zoom.jpg" alt="">
