seller block added

--- a/bootstrap4/index.html
+++ b/bootstrap4/index.html
@@ -117,6 +117,53 @@
 <div class="main container">
 	<div class="row">
 		<div class="col-md-7 col-lg-8 col-xs-12 base">
+            <div class="seller">
+                <ul class="seller__nav clearfix">
+    				<li class="seller__nav-item dropdown">
+    				    <span class="seller__nav-text h6">SELLER APPLICATION COUNTRY:</span>
+    				</li>
+    				<li class="seller__nav-item dropdown">
+    				    <a class="seller__nav-text h6 dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true" aria-expanded="false">UNITED STATES</a>
+    				    <div class="dropdown-menu">
+    				      <a class="dropdown-item" href="#">All (14,400)</a>
+    				      <a class="dropdown-item" href="#">United States (2,000)</a>
+    				      <a class="dropdown-item" href="#">Canada (12,000)</a>
+    				      <a class="dropdown-item" href="#">France (300)</a>
+    				      <a class="dropdown-item" href="#">Singapore (100)</a>
+    				    </div>
+    				</li>
+                </ul>
+                <div class="seller__content">
+                    <div class="row">
+                        <div class="col-xs-12 col-sm-4 col-md-6 col-lg-4">
+                            <dl class="seller__info">
+                                <dt class="seller__info-title h6">PERSONAL INFO</dt>
+                                <dd class="seller__info-text"><a href="">Kevin_Aaron06</a></dd>
+                                <dd class="seller__info-text">Kevin Pence</dd>
+                                <dd class="seller__info-text">DOB 1/11/1987</dd>
+                                <dd class="seller__info-text">+1 3442428</dd>
+                            </dl>
+                        </div>
+                        <div class="col-xs-12 col-sm-4 col-md-6 col-lg-4">
+                            <dl class="seller__info">
+                                <dt class="seller__info-title h6">RETURN ADDRESS</dt>
+                                <dd class="seller__info-text">USA</dd>
+                                <dd class="seller__info-text"><a href="">8530 W Washington Blvd</a></dd>
+                                <dd class="seller__info-text">b</dd>
+                                <dd class="seller__info-text">Culver City, CA 90034</dd>
+                            </dl>
+                        </div>
+                        <div class="col-xs-12 col-sm-4 col-md-6 col-lg-4">
+                            <dl class="seller__info">
+                                <dt class="seller__info-title h6">SOCIAL ACCOUNTS</dt>
+                                <dd class="seller__info-text"><a href=""><img src="i/instagram-logo.svg" alt="" class="seller__info-icon">KevinAaron</a></dd>
+                                <dd class="seller__info-text"><a href=""><img src="i/twitter-logo.svg" alt="" class="seller__info-icon">Kevin_aaronP</a></dd>
+                                <dd class="seller__info-text"><img src="i/facebook-logo.svg" alt="" class="seller__info-icon">n/a</dd>
+                            </dl>
+                        </div>
+                    </div>
+                </div>
+            </div>
     	    <div class="product-images">
     	    	<div class="product-images-item">
     	    		<img src="i/temp/zoom.jpg" alt="" data-toggle="modal" data-target="#Popup">
